--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -26,25 +26,25 @@
 
 > 釋：一、近數年來，社會環境變遷，工商業發展，物價指數不斷提高，爰將罰金額度予以提高五倍。二、為防止虛設公司及防範經濟犯罪，爰將公司應收股款有虛偽不實情事之處罰併入第一項。
 
-* 10 公司有左列情事之一者，中央主管機關得依職權或據地方主管機關報請或利害關係人之申請，命令解散之：一、公司設立登記後滿六個月尚未開始營業或開始營業後自行停止營業六個月以上者。二、公司董事或執行業務股東，有違反法令或章程之行為，足以影響公司正常經營，經主管機關以書面警告而不改正，尚在繼續中者。前項第一款所定期限，如有正當事由，公司得申請延展。
+* 10 公司有左列情事之一者，中央主管機關得依職權或據地方主管機關報請或利害關係人之申請，命令解散之：一、公司設立登記後六個月尚未開始營業或開始營業後自行停止營業六個月以上者。但有正當理由者，得申請延展。二、公司設立或變更登記後六個月尚未辦妥營利事業登記者。但有正當理由者，不在此限。公司有違反法令或章程之行為，足以影響正常經營者，主管機關得訂定期限命其改正；不於期限內改正者，公司負責人各處二千元以上一萬元以下罰鍰，並再次定期命其改正；期滿仍未改正者，中央主管機關得依職權或據地方主管機關報請命令解散之。但其違反法令或章程情節重大者，中央主管機關得依職權或據地方主管機關報請或利害關係人申請，逕行命令解散之。
 
-> 釋：一、第一項內「呈請」二字修正為「報請」。二、為保障社會大眾經濟利益，防止虛設公司，並為配合第四百零二條之一增訂停業登記之規定，爰將自行停止營業命令解散之期間予以縮短，修正第一項第一款後段「一年以上者」為「六個月以上者」，以期加強管理。三、第一項第一款「公司設立後」修正為「公司設立登記後」，以資明確。
+> 釋：一、增列第一項第二款，現行該項款規定移列修正為第二項，第二項刪除，改列為第一項第一款但書。二、公司登記後未辦妥營利事業登記，公司登記應如何處理，本法欠缺明文，爰增列第一項第二款規定。三、現行第一項所列二款命令解散情形，易致觀念上混淆，且現行第一項第二款亦欠缺彈性，爰修正以公司為管理對象，並分別視違規情節輕重訂定限期改正、罰鍰及解散或逕行解散之不同程序，以期落實管理，
 
 * 11 公司之經營，有顯著困難或重大損害時，法院得據股東之聲請，於徵詢中央主管機關及目的事業中央主管機關意見，並通知公司提出答辯後，裁定解散。前項聲請，在股份有限公司，應有繼續六個月以上持有已發行股份總數百分之十以上股份之股東提出之。
 
 * 12 公司設立登記後，有應登記之事項而不登記，或已登記之事項有變更而不為變更之登記者，不得以其事項對抗第三人。
 
-* 13 公司不得為他公司無限責任股東或合夥事業之合夥人；如為他公司有限責任股東時，其所有投資總額，除以投資為專業者外，不得超過本公司實收股本百分之四十。公司轉投資達到前項所定數額後，其因被投資公司以盈餘或公積增資配股所得之股份，不受前項限制。公司負責人違反第一項規定時，各科二萬元以下罰金，並賠償公司因此所受之損害。
+* 13 公司不得為他公司無限責任股東或合夥事業之合夥人；如為他公司有限責任股東時，其所有投資總額，除以投資為專業或公司章程另有規定或經左列各款規定，取得股東同意或股東會決議者外，不得超過本公司實收股本百分之四十：一、無限公司、兩合公司經全體無限責任股東同意。二、有限公司經全體股東同意。三、股份有限公司經代表已發行股份總數三分之二以上股東出席，以出席股東表決權過半數同意之股東會決議。公司因接受被投資公司以盈餘或公積增資配股所得之股份，不計入前項投資總額。公司負責人違反第一項規定時，各科二萬元以下罰金，並賠償公司因此所受之損害。
 
-> 釋：近數年來，社會環境變遷，工商業發展，物價指數不斷提高，爰將罰金額度予以提高五倍。
+> 釋：一、為因應經濟發展需要，提昇投資意願，鼓勵公司多角化經營，並發揮其潛力，爰修正第一項使依公司章程另有規定或不同種類之公司，於取得股東同意或股東會決議者，其所有投資總額在一定之情況下，亦可不受不得超過實收股本百分之四十之限制。二、因被投資公司以盈餘或公積增資配股所得股份，非投資公司可掌握者，爰刪除現行第二項首句中「轉投資達到前項所定數額後」之不受第一項限制之條件並將末句「不受前項限制」修正為「不計入前項投資總額」，以資明確。三、第二項前段於「因」字下增列「接受」二字。
 
 * 14 公司因擴充生產設備而增加固定資產，其所需資金，不得以短期債款支應。短期債款之期限，由行政院以命令定之。公司負責人違反第一項之規定時，各科二萬元以下罰金，並賠償公司因此所受之損害。
 
 > 釋：近數年來，社會環境變遷，工商業發展，物價指數不斷提高，爰將罰金額度予以提高五倍。並將「本條」改為「第一項」，酌作文字修正。
 
-* 15 公司不得經營登記範圍以外之業務。公司之資金，不得貸與其股東或其他個人。公司負責人違反前二項規定時，各科二萬元以下罰金，並賠償公司因此所受之損害。
+* 15 公司不得經營登記範圍以外之業務。公司之資金，除因公司間業務交易行為有融通資金之必要者外，不得貸於股東或任何他人。公司負責人違反前二項規定時，各處一年以下有期徒刑、拘役或科或併科五萬元以下罰金，並賠償公司因此所受之損害。
 
-> 釋：近數年來，社會環境變遷，工商業發展，物價指數不斷提高，爰將罰金額度予以提高五倍。並將「得」字刪除，改採硬性處罰之規定；「本條」改為「前二項」，酌作文字修正。
+> 釋：一、依現行第二項規定，公司之資金雖不得貸與股東及其他個人（自然人），卻得貸與非股東之法人，致實務上公司可透過非股東之法人轉借，爰修正除因業務交易行為有融通資金之必要得貸與他公司外，不得貸與股東或任何他人。二、為有效防止公司經營登記範圍以外之業務及將資金貸與股東或任何他人，乃配合商業登記法第三十三條第二項有關刑責之規定，將第三項之罰則，予以提高。
 
 * 16 公司除依其他法律或公司章程規定得為保證者外，不得為任何保證人。公司負責人違反前項規定時，應自負保證責任，並各科二萬元以下罰金，如公司受有損害時，亦應負賠償責任。
 
@@ -54,23 +54,29 @@
 
 > 釋：一、原條文「須經政府特許者」，其範圍不明確，爰參照商業登記法第五條及其施行細則第七條之規定，修正為「依法律或基於法律授權訂定之命令，須經政府許可者」。二、特許事業經目的事業主管機關撤銷許可後，如不賦予主管機關撤銷登記之權，將影響管理工作至鉅，爰參照商業登記法第三十一條第三項之規定，增列第二項撤銷登記之規定。
 
-* 18 同類業務之公司，不問是否同一種類，是否同在一省（市）區域以內，不得使用相同或類似名稱。不同類業務之公司，使用相同名稱時，登記在後之公司，應於名稱中加記可資區別之文字。公司不得使用外語譯音及易於使人誤認為與政府機關、公益團體有關之名稱。但經認許之外國公司或外國人依法核准投資所設立之公司，得使用外語譯音。
+* 17.1 公司之經營有違反法令受勒令歇業處分者，應由處分機關通知中央主管機關，撤銷其公司登記或部分登記事項。
 
-> 釋：一、本條對不同類業務之公司，使用相同之公司名稱時，尚乏禁止規定，致有二公司名稱完全相同之情形發生，交易上常相混淆，行政管理上亦常導致差錯，爰增列第二項以消除此弊。二、為免公司名稱使用外語譯音及影射政府機關或公益團體，爰參照商業登記法第二十八條規定並配合政策，增列第三項。
+> 釋：按公司業務之經營，應遵守有關管理法令之規定，如有違反而受勒令歇業之處分者，為建立「公司登記」與「管理」間之勾稽，爰參考本法第十七條第二項，商業登記法第三十一條第一項第二款規定，增列本條。
 
-* 19 未經設立登記，不得以公司名義經營業務或為其他法律行為。違反前項規定者，行為人各科一萬五千元以下罰金，並自負其責，行為人有二人以上者，連帶負責，並由主管機關禁止其使用公司名稱。
+* 18 同類業務之公司，不問是否同一種類，是否同在一省（市）區域以內，不得使用相同或類似名稱。不同類業務之公司，使用相同名稱時，登記在後之公司應於名稱中加記可資區別之文字；二公司名稱中標明不同業務種類者，其公司名稱視為不相同或不類似。公司名稱標明業務種類者，除法令另有規定外，其所登記經營業務範圍，不以所標明之業務種類為限。公司不得使用易於使人誤認其與政府機關、公益團體有關或有妨害公共秩序或善良風俗之名稱。公司名稱及業務，於公司登記前應先申請核准，並保留一定期間；其審核準則，由中央主管機關定之。
 
-> 釋：一、近數年來，社會環境變遷，工商業發展，物價指數不斷提高，爰將罰金額度予以提高五倍。二、參照公司法第十五、第十六條之體例，將禁止規定列前，處罰規定列後，並作文字修正。
+> 釋：一、第二項增列後段規定，以使名稱標明不同業務種類之公司，不致造成公司名稱相同或類似。二、現行本法並無專業經營之限制規定，公司名稱如標明業務種類字樣，其所經營之事業應不以其標明之業務種類為範圍，爰增訂第三項。三、現行第三項移列為第四項，並刪除「不得使用外語譯音」為名稱之限制。因外語種類繁多，致引起公司名稱皆可能與某種外語譯音相近，實務上頗為困擾，第四項另增列「有妨害公共秩序或善良風俗之名稱」之規定。申請登記之公司名稱審查作業僅賴行政解釋，易滋爭執，爰參據商標法第三十七條第一項第五款規定增列。四、現行本法僅規範相同或類似名稱禁止使用之規定，惟對於其審核標準尚乏具體明文規定，適用上極易造成紛爭，宜授權由中央主管機關訂定登記審核準則，爰增列第五項。
 
-* 20 公司每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表及盈餘分配表或虧損撥補表，提請股東同意或股東會承認。資本額達一定數額以上之公司，其資產負債表及損益表，除政府核定之公營事業外，並應先經會計師簽證。前項數額，由中央主管機關以命令定之。第一項書表，主管機關得隨時派員查核；其查核辦法，由中央主管機關定之。公司負責人違反第一項或第二項規定時，各處一千元以上五千元以下罰鍰；對於表冊為虛偽記載者，依刑法或特別刑法有關規定處罰。
+* 19 未經設立登記，不得以公司名義經營業務或為其他法律行為。違反前項規定者，行為人各處一年以下有期徒刑、拘役或科或併科五萬元以下罰金，並自負其責；行為人有二人以上者，連帶負責，並由主管機關禁止其使用公司名稱。
 
-> 釋：一、第一項後段「於股東同意或股東會承認後三十日內，報請主管機關查核」修正為「提請股東同意或股東會承認」。二、另增訂第二項，本條第二項至第四項均予刪除。
+> 釋：為加強公司管理，對凡未經設立登記而以公司名義經營業務或為其他法律行為者，配合商業登記法第三十二條第二項有關刑責之規定，將第二項之罰則予以提高，俾予有效執行。
 
-* 21 主管機關得隨時派員檢查公司業務及財務狀況，如發現其有經營不當之情事時，得命令糾正。
+* 20 公司每屆營業年度終了，應將營業報告書、資產負債表、主要財產之財產目錄、損益表、股東權益變動表、現金流量表及盈餘分配或虧損撥補之議案，提請股東同意或股東會承認。公司資本額達中央主管機關所定一定數額以上者，其資產負債表、損益表、股東權益變動表及現金流量表，除公營事業外，並應先經會計師查核簽證。前項會計師之委任、解任及報酬，準用第二十九條第二項規定。第一項書表，主管機關得隨時派員查核或令其限期申報；其辦法，由中央主管機關定之。公司負責人違反第一項、第二項規定時，各處二千元以上一萬元以下罰鍰；妨礙、拒絕前項查核或逾期不申報時，各處三千元以上二萬元以下罰鍰；對於表冊為虛偽記載者，依刑法或特別刑法有關規定處罰。
 
-* 22 主管機關查核第二十條所定各項書表有疑問時，得令公司提出證明文件、單據、表冊。但應保守秘密，並於收受後三十日內，查閱發還。
+> 釋：一、第一項作左列修正：（一）公司之「財產目錄」，內容瑣細，若每年編列，欠缺實質效益，爰修正為「主要財產之財產目錄」。（二）增列「股東權益變動表」、「現金流量表」俾使股東瞭解其權益變動及公司財務活動情形。（三）依本法第二百二十八條第一項第七款規定，在股東常會通過之前，盈餘分派或虧損撥補案僅為董事會提請股東會討論之議案，爰將「盈餘分配表或虧損撥補表」配合修正為「盈餘分派或虧損撥補之議案」。二、第二項配合第一項之修正，增列「股東權益變動表」、「現金流量表」，並於「簽證」前增列「查核」二字，「政府核定之公營事業」修正為「公營事業」，另將現行第三項併入本項，以資簡潔。三、為提升會計師簽證品質，健全工商企業之財務報表，對簽證會計師之委任、解任及報酬，有明文準用第二十九條第二項之必要，爰增訂第三項。四、為加強公司管理及防制經濟犯罪，對於公司各種書表，主管機關基於管理需要，得令公司限期申報，爰配合修正第四項規定。五、為加強公司管理，配合前各項修正，將現行第五項規定罰鍰之上下限，均提高為二倍，並增列對妨礙、拒絕第四項之查核或逾期不申報者之處罰，以收實效。
 
-> 釋：僅作文字修正。將「審核」修正為「查核」、「簿冊」修正為「書表」。
+* 21 主管機關得會同目的事業主管機關，隨時派員檢查公司業務及財務狀況，公司負責人不得妨礙或拒絕。公司負責人妨礙或拒絕前項檢查者，各處三千元以上二萬元以下罰鍰；連續妨礙或拒絕者，並按次連續各處六千元以上四萬元以下罰鍰。主管機關依第一項規定派員檢查時，得視需要選任會計師或律師或其他專業人員協助辦理。
+
+> 釋：一、目的事業主管機關對於相關公司有監督之責，故修正本條第一項，增列得會同檢查之規定。二、將現行條文後段修正為「公司負責人不得妨礙或拒絕」，以應管理之需要，列為第一項。三、主管機關於派員檢查公司業務及財務狀況時，公司應予配合，如妨礙或拒絕檢查時，應有配合之處罰規定，始能達到防制經濟犯罪及發揮管理之目的，爰增列第二項。四、主管機關派員檢查公司業務及財務狀況時，常涉及會計或法律專業知識，為因應實際需要，爰增訂第三項。
+
+* 22 主管機關查核第二十條所定各項書表，或依前條檢查公司業務及財務狀況時，得令公司提出證明文件、單據、表冊及有關資料。但應保守秘密，並於收受後十五日內，查閱發還。公司負責人違反前項規定，拒絕提出時，各處三千元以上二萬元以下罰鍰；提出之證明文件、單據、表冊及有關資料有虛偽記載者，依刑法或特別刑法有關規定處罰。
+
+> 釋：一、為加強公司管理，配合前條規定將現行條文酌作修正，列為第一項，俾利執行。二、為有效管理公司，增訂第二項處罰規定，以利實務需要。
 
 * 23 公司負責人對於公司業務之執行，如有違反法令致他人受有損害時，對他人應與公司負連帶賠償之責。
 
@@ -356,7 +362,9 @@
 
 * 129 發起人應以全體之同意訂立章程，載明左列各款事項簽名、蓋章：一、公司名稱。二、所營事業。三、股份總數及每股金額。四、本公司所在地。五、公告方法。六、董事及監察人之人數及任期。七、訂立章程之年、月、日。
 
-* 130 左列各款事項，非經載明於章程者，不生效力：一、分公司之設立。二、分次發行股份者，定於公司設立時之發行數額。三、解散之事由。四、特別股之種類及其權利義務。五、發起人所得受之特別利益及受益者之姓名。前項發起人所得受之特別利益，無定期或無確數者，股東會得修改或撤銷之。但不得侵及發起人既得之利益。
+* 130 左列各款事項，非經載明於章程者，不生效力：一、分公司之設立。二、分次發行股份者，定於公司設立時之發行數額。三、解散之事由。四、特別股之種類及其權利義務。五、發起人所得受之特別利益及受益者之姓名。六、公司債可轉換股份之數額。前項發起人所得受之特別利益，無定期或無確數者，股東會得修改或撤銷之；但不得侵及發起人既得之利益。
+
+> 釋：按公司發行之轉換公司債，須俟債權人請求轉換為股份時，始可歸入公司實收資本額，為顯現轉換公司債之特性及符合實際狀況，公司章程中除載明資本總額外，應另載明可轉換股份數額，第一項爰增列第六款。
 
 * 131 發起人認足第一次應發行之股份時，應即按股繳足股款並選任董事及監察人。前項選任方法，準用第一百九十八條之規定。第一項之股款，得以公司事業所需之財產抵繳之。
 
@@ -424,9 +432,9 @@
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
-* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類由章程定之。前項股份總數，得分次發行。但第一次應發行之股份，不得少於股份總數四分之一。股份有限公司之最低資本總額，得由主管機關分別性質，斟酌情形，以命令定之。公司資本額達一定數額以上者，除經政府核定之公營事業及目的事業主管機關專案核定者外，其股票須公開發行；該項數額，由主管機關以命令定之。股東之出資，除發起人之出資及本法另有規定外，以現金為限。同次發行之股份，其發行條件相同者，價格應歸一律。
+* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。但第一次應發行之股份，不得少於股份總數四分之一。股份有限公司之最低資本總額，得由主管機關分別性質，斟酌情形，以命令定之。公司資本額達中央主管機關所定一定數額以上者，除經目的事業中央主管機關專案核定者外，其股票應公開發行。但公營事業股票之公開發行，應由該公營事業之主管機關專案核定之。股東之出資，除發起人之出資及本法另有規定外，以現金為限。同次發行之股份，其發行條件相同者，價格應歸一律。
 
-> 釋：第四項增列公營事業及目的事業主管機關專案核定者之除外規定，以示有別。
+> 釋：第四項將「目的事業主管機關」修正為「目的事業中央主管機關」，以資明確；又公營事業之經營，其性質與民營事業有別，公司資本額達一定數額以上之公營事業，其股票是否須公開發行，宜由其主管機關斟酌各別情形專案核定，俾符實際需要，爰增列第四項但書。
 
 * 157 公司發行特別股時，應就左列各款於章程中定之：一、特別股分派股息及紅利之順序、定額或定率。二、特別股分派公司賸餘財產之順序、定額或定率。三、特別股之股東行使表決權之順序、限制或無表決權。四、特別股權利、義務之其他事項。
 
@@ -644,15 +652,15 @@
 
 * 227 第一百九十六條至第二百條、第二百十四條及第二百十五條之規定，於監察人準用之。但第二百十四條對監察人之請求應向董事會為之。
 
-* 228 每營業年度終了，董事會應編造左列表冊，於股東常會開會三十日前交監察人查核：一、營業報告書。二、資產負債表。三、財產目錄。四、損益表。五、盈餘分派或虧損彌補之議案。前項表冊，應依中央主管機關規定之規章編造。第一項表冊，監察人得請求董事會提前交付查核。公司負責人對第一項所列表冊為虛偽記載者，依刑法或特別刑法有關規定處罰。
+* 228 每營業年度終了，董事會應編造左列表冊，於股東常會開會三十日前交監察人查核：一、營業報告書。二、資產負債表。三、主要財產之財產目錄。四、損益表。五、股東權益變動表。六、現金流量表。七、盈餘分派或虧損撥補之議案。前項表冊，應依中央主管機關規定之規章編造。第一項表冊，監察人得請求董事會提前交付查核。公司負責人對第一項所列表冊為虛偽記載者，依刑法或特別刑法有關規定處罰。
 
-> 釋：第四項「公司負責人」修正為「代表公司之董事」，末句之「各」字刪除，罰金額度提高五倍。
+> 釋：一、第一項作左列修正：（一）第三款「財產目錄」修正為「主要財產之財產目錄」。（二）增訂第五款「股東權益變動表」及第六款「現金流量表」。（三）現行第五款移列為第七款，並將「虧損彌補」配合第二十條第一項「虧損撥補」之用語，作文字修正。
 
 * 229 董事會所造具之各項表冊與監察人之報告書，應於股東常會開會十日前，備置於本公司，股東得隨時查閱，並得偕同其所委託之律師或會計師查閱。
 
-* 230 董事會應將其所造具之各項表冊，提出於股東常會請求承認，經股東常會承認後，董事會應將資產負債表、損益表及盈餘分派或虧損彌補之決議，分發各股東；其公開發行股票或公司債者，此項表冊並應經會計師依證券管理機關規定之簽證規章，查核簽證，於一個月內公告之。前項表冊及決議，公司債權人得要求給予或抄錄。代表公司之董事，違反第一項規定不為分發或公告時，分別由主管機關或證券管理機關處二千元以上一萬元以下罰鍰。
+* 230 董事會應將其所造具之各項表冊，提出於股東常會請求承認，經股東常會承認後，董事會應將資產負債表、損益表、股東權益變動表、現金流量表及盈餘分派或虧損撥補之決議，分發各股東。前項表冊及決議，公司債權人得要求給予或抄錄。代表公司之董事，違反第一項規定不為分發時，處二千元以上一萬元以下罰鍰。
 
-> 釋：一、第一項「中央主管機關」改為「證券管理機關」，以符實際。二、分發或公告第一項所定之表冊及決議，為代表公司董事之職責，如有違反，應處罰代表公司之董事，不應罰及全體董事，爰將第三項「公司負責人」改為「代表公司之董事」。並將罰鍰提高及設下限，以加重處罰。三、公開發行公司不為公告時，宜由證券管理機關科處罰鍰，爰於第三項明定之。
+> 釋：一、第一項「損益表」後增列「股東權益變動表、現金流量表」，並將「虧損彌補」修正為「虧損撥補」，俾與第二十條第一項用語一致。又證券交易法第三十六條對於公開發行股東或公司債之公司之年度財務報告，應予簽證及公告等事項，另有不同且更週延之規定，原條文第一項後段規定，已無存在之必要，爰予刪除。二、配合第一項之修正，第三項作文字修正。
 
 * 231 各項表冊經股東會決議承認後，視為公司已解除董事及監察人之責任。但董事或監察人有不法行為者，不在此限。
 
@@ -664,9 +672,9 @@
 
 * 234 公司依其業務之性質，自設立登記後，如需二年以上之準備，始能開始營業者，經主管機關之許可，得以章程訂明於開始營業前分派股息於股東。前項分派股息之金額，得以預付股息列入資產負債表之資產項下，公司開始營業後，每屆分派股息及紅利超過已收資本總額百分之六時，應以其超過之金額扣抵沖銷之。
 
-* 235 股息及紅利之分派，除章程另有規定外，以各股東持有股份之比例為準。章程應訂明員工分配紅利之成數，但經政府核定之公營事業及目的事業主管機關專案核定者，不在此限。
+* 235 股息及紅利之分派，除章程另有規定外，以各股東持有股份之比例為準。章程應訂明員、工分配紅利之成數。但經目的事業中央主管機關專案核定者，不在此限。公營事業除經該公營事業之主管機關專案核定，並於章程訂明員、工分配紅利之成數外，不適用前項前段之規定。
 
-> 釋：經政府核定及專案核定之事業，其設立本具有特殊目的，對於員工且另有其他獎勵辦法，其性質與一般事業不同，不宜再有分紅之規定，爰於第二項增訂但書除外規定，以利執行。
+> 釋：一、公營事業員工分配紅利成數之規定移列為第三項，爰將第二項但書中之「政府核定之公營事業及」等字刪除，並將「目的事業主管機關」修正為「目的事業中央主管機關」，以資明確。二、公營事業須經該公營事業之主管機關專案核定員工可參與紅利分派，並於章程訂明員工分配紅利之成數，其員工始得參與紅利之分派，爰增列第三項。
 
 * 236 固定資產重估價值，須依法辦理之。有價證券及存貨之溢價，非至實現不得入帳。
 
@@ -700,9 +708,9 @@
 
 * 247 公司債之總額，不得逾公司現有全部資產減去全部負債及無形資產後之餘額。無擔保公司債之總額，不得逾前項餘額二分之一。
 
-* 248 公司募集公司債時，應將左列事項，申請證券管理機關審核之：一、公司名稱。二、公司債總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計畫及保管方法。六、公司債募得價款之用途及運用計畫。七、前已募集公司債者，其未償還之數額。八、公司債發行價格或最低價格。九、公司股份總額與已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、最近三年依第二百二十八條規定所編造之各項表冊；開業不及三年者，所有開業年度之各項表冊；申請日期已逾年度開始六個月者，應另送上半年之資產負債表。十二、公司債債權人之受託人名稱及其約定事項。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類、名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實或現況。十八、能轉換股份者，其轉換辦法。十九、董事會之議事錄。二十、公司債其他發行事項，或證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正，公司負責人不為申請更正時，由證券管理機關各處二千元以上一萬元以下罰鍰。第一項第七款、第九款至第十一款、第十七款，應由會計師查核簽證；其中第十一款所定之年度表冊，於公營事業得以審計機關審定代替之；第十二款至第十六款，應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之，並負擔其報酬。第一項第十八款之轉換股份額，如超過公司章程所定資本總額時，應先完成變更章程增加資本總額後，始得為之；其審核標準，由證券管理機關以命令定之。
+* 248 公司募集公司債時，應將左列事項，申請證券管理機關審核之：一、公司名稱。二、公司債總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計畫及保管方法。六、公司債募得價款之用途及運用計畫。七、前已募集公司債者，其未償還之數額。八、公司債發行價格或最低價格。九、公司股份總額與已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、最近三年依第二百二十八條規定所編造之各項表冊；開業不及三年者，所有開業年度之各項表冊；申請日期已逾年度開始六個月者，應另送上半年之資產負債表。十二、公司債債權人之受託人名稱及其約定事項。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類、名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實或現況。十八、能轉換股份者，其轉換辦法。十九、董事會之議事錄。二十、公司債其他發行事項，或證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正時，由證券管理機關各處二千元以上一萬元以下罰鍰。第一項第七款、第九款至第十一款、第十七款，應由會計師查核簽證；第十二款至第十六款，應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之，並負擔其報酬。第一項第十八款之轉換股份額，如超過公司章程所定可轉換股份之數額時，應先完成變更章程增加可轉換股份之數額後，始得為之；其處理準則，由證券管理機關以命令定之。
 
-> 釋：一、證券管理，依修正之財政部組織法第六條第十款之規定，屬於財政部職掌，現證券管理委員會，亦由經濟部改隸財政部，爰將第一項序文「地方主管機關核轉中央主管機關」、第一項第二十款「中央主管機關」、第二項「主管機關」暨第五項「中央主管機關」均改為「證券管理機關」以符實際。二、第二項將罰鍰提高三倍並設下限。增列由證券管理機關科處罰鍰。三、第三項酌作文字修正。
+> 釋：一、公營事業依證券交易法發行有價證券者，有關會計師查核簽證之事項，應依證券交易法及依該法發布之命令辦理。復查審計機關對公營事業之審核，在審計法中規定有明文，爰刪除第三項中「其中第十一款所定之年度表冊，於公營事業得以審計機關審定代替之」之規定。二、為配合推動轉換公司債及本法第一百三十條第一項及第二百七十八條第三項之修正，爰將第五項之「資本總額」均修正為「可轉換為股份額」；又為配合證券交易法第二十二條第一項規定，並將本項末段「審核標準」修正為「處理準則」，以期用語一致。
 
 * 249 公司有左列情形之一者，不得發行無擔保公司債：一、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實已了結者。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債，應負擔年息總額之百分之一百五十者。
 
@@ -758,13 +766,13 @@
 
 * 266 公司依第一百五十六條第二項分次發行新股，或依第二百七十八條第二項發行增資後之新股，均依本節之規定。公司發行新股時，應由董事會以董事三分之二以上之出席，及出席董事過半數同意之決議行之。第一百四十一條、第一百四十二條之規定，於發行新股準用之。
 
-* 267 公司發行新股時，除經政府核定之公營事業及目的事業主管機關專案核定者外，應保留發行新股總額百分之十至十五之股份，由公司員、工承購，其餘於向外公開發行或洽由特定人認購之十日前，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利，原有股東持有股份按比例有不足分認一新股者，得合併共同認購或歸併一人認購。前項新股認購權利，除保留由員、工承購者外，得與原有股份分離而獨立轉讓。第一項所定保留員、工承購股份及認購期限之規定，於以公積或資產增值抵充，核發新股予原有股東者，不適用之。本條規定，對於因合併他公司或以轉換公司債轉換為股份而增發新股時，不適用之。
+* 267 公司發行新股時，除經目的事業中央主管機關專案核定者外，應保留原發行新股總額百分之十至十五之股份由公司員、工承購。公營事業經該公營事業之主管機關專案核定者，得保留發行新股由員、工承購；其保留股份，不得超過發行新股總額百分之十。公司發行新股時，除依前二項保留者外，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利；原有股東持有股份按比例不足分認一新股者，得合併共同認購或歸併一人認購；原有股東未認購者，得公開發行或洽由特定人認購。前三項新股認購權利，除保留由員、工承購者外，得與原有股份分離而獨立轉讓。第一項、第二項所定保留員、工承購股份之規定，於以公積或資產增值抵充，核發新股予原有股東者，不適用之。公司對員、工依第一項、第二項承購之股份，得限制在一定期間內不得轉讓。但其期間，最長不得超過三年。本條規定，對於因合併他公司或以轉換公司債轉換為股份而增發新股時，不適用之。公司負責人違反第一項規定時，各處三千元以上二萬元以下罰鍰。
 
-> 釋：經「目的事業主管機關專案核定」之公司，其設立具有特殊目的，與一般事業之性質不同，公司員工不宜適用保留認股之規定，爰比照公營事業於第一項增列除外之規定。
+> 釋：一、第一項將「目的事業主管機關」修正為「目的事業中央主管機關」；另公營事業發行新股有關保留員工新股認購之規定移列為第二項，爰將現行第一項中之「政府核定之公營事業及」等字刪除，並就發行新股應踐行之通知、公告股東儘先認購及逾期不認購之處理規定移列為第三項，並酌作文字修正。二、公營事業發行新股保留部分由員工承購，應經該公營事業之主管機關專案核定始得為之，且其保留股份不得超過發行新股總額百分之十，爰增列第二項。三、現行第二、三、四項移列為第四、五、七項，又因公營事業發行新股有關保留員工新股認購之規定已移列為第二項，除將四項首句之「前項」修正為「前三項」外，並將第五項中之「第一項」修正為「第一項、第二項」。四、有關保留股份由員工承購，有利企業之經營，如員工承購後，隨即轉換，非但股權變動頻繁，影響經營權之安定，亦將使分紅入股促進勞資合作之目的落空，爰增訂第六項。五、增列第八項公司負責人違反第一項規定之罰鍰。
 
-* 268 公司發行新股時，除由原有股東及員、工全部認足或由特定人協議認購而不公開發行者外，應將左列事項，申請證券管理機關核准，公開發行：一、公司名稱。二、原定股份總數、已發行數額及金額。三、發行新股總額、每股金額及其他發行條件。四、最近三年依第二百二十八條規定所編造之各項表冊。開業不及三年者，所有開業年度之各項表冊。申請日期已逾年度開始六個月者，應另送上半年之資產負債表。五、營業計畫書。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、代收股款之銀行或郵局名稱及地址。八、有承銷或代銷機構者，其名稱及約定事項。九、發行新股決議之議事錄。十、證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正者，由證券管理機關各處二千元以上一萬元以下罰鍰。第一項第二款至第四款及第六款，由會計師查核簽證；第七款、第八款由律師查核簽證；其中第四款所定之年度表冊，於公營事業得以審計機關審定代替之。第一項、第二項規定，對於第二百六十七條第三項之發行新股，不適用之。
+* 268 公司發行新股時，除由原有股東及員、工全部認足或由特定人協議認購而不公開發行者外，應將左列事項，申請證券管理機關核准，公開發行：一、公司名稱。二、原定股份總數、已發行數額及金額。三、發行新股總額、每股金額及其他發行條件。四、最近三年依第二百二十八條規定所編造之各項表冊；開業不及三年者，所有開業年度之各項表冊；申請日期已逾年度開始六個月者，應另送上半年之資產負債表。五、營業計畫書。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、代收股款之銀行或郵局名稱及地址。八、有承銷或代銷機構者，其名稱及約定事項。九、發行新股決議之議事錄。十、證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正者，由證券管理機關各處二千元以上一萬元以下罰鍰。第一項第二款至第四款及第六款，由會計師查核簽證；第七款、第八款，由律師查核簽證。第一項、第二項規定，對於第二百六十七條第五項之發行新股，不適用之。
 
-> 釋：一、證券管理，依修正之財政部組織法第六條第十款之規定，屬於財政部職掌，現證券管理委員會，亦由經濟部改隸財政部，爰將第一項「地方主管機關核轉中央主管機關」及第二項「主管機關」均改為「證券管理機關」。二、第二項並將罰鍰提高及設下限，以加重處罰。增列由證券管理機關科處罰鍰。
+> 釋：一、公營事業依證券交易法發行有價證券者，有關會計師查核簽證之事項，應依證券交易法及依法發布之命令辦理。復查審計機關對公營事業之審核，在審計法中規定有明文，爰刪除第三項末句「其中第四款所定之年度表冊於公營事業得以審計機關審定代替之」之規定。二、為配合第二百六十七條之修正，爰將第四項「對於第二百六十七條第三項」修正為「對於第二百六十七條第五項」。
 
 * 269 公司有左列情形之一者，不得公開發行具有優先權利之特別股：一、最近三年或開業不及三年之開業年度課稅後之平均淨利，不足支付已發行及擬發行之特別股股息者。二、對於已發行之特別股約定股息，未能按期支付者。
 
@@ -792,9 +800,9 @@
 
 > 釋：為使規模較大公開發行股票之公司遇有特別議案時，股東會易於召開，在不違反多數決議之原則下，參考日本商法第三四三條之規定，增訂第三項及第四項，以緩和股東收購委託書之壓力及保障大眾投資者權益。
 
-* 278 公司非將已規定之股份總數，全數發行後，不得增加資本。增加資本後，第一次發行之股份，不得少於增加之股份總數四分之一。前項規定，於依第二百六十二條發行股份者，不適用之。
+* 278 公司非將已規定之股份總額，全數發行後，不得增加資本。增加資本後，第一次發行之股份，不得少於增加之股份總數四分之一。公司章程載有公司債可轉換股份之數額者，前二項股份總數之計算，不包括可轉換股份之數額。第一項、第二項規定，於公司債可轉換股份之數額依第二百六十二條發行股份者，不適用之。
 
-> 釋：轉換公司債，債權人對轉換股份有選擇權，本法第二百六十二條訂有明文，因而每次發行新股是否有債權人願意轉換及轉換股之數額均無法事先確定，爰增列第三項，以排除本條第二項之適用。
+> 釋：一、本條第一、二項係針對授權資本制之特性所為之規定，而轉換公司債依第一百三十條之規定，須在章程內預先保留一定額之股份，供未來債權人請求轉換時換發新股，惟債權人對轉換股份與否有選擇權，因而每次發行新股是否有債權人願意轉換股份之數額，均無法事先確定，爰增訂第三項。二、基於前項說明，及證券管理機關於公司原發行公司債未全數轉換為股份前，仍得核准其另募集轉換公司債，第一項及第二項之規定，於公司債可轉換股份之數額，依本法第二百六十二條發行股份者，亦應無適用之餘地，爰將現行第三項修正後，改列為第四項。。
 
 * 279 因減少資本換發新股票時，公司應於減資登記後，定六個月以上之期限，通知各股東換取，並聲明逾期不換取者，喪失其股東之權利；發行無記名股票者，並應公告之。股東於前項期限內不換取者，即喪失其股東之權利，公司得將其股份拍賣，以賣得之金額，給付該股東。公司負責人違反本條通知或公告期限之規定時，各處一千元以上五千元以下罰鍰。
 
